# aluci-python-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh
tests/: main_test.py
