[project]
name = "ProjectName"
version = "0.1.0"
description = ""
authors = [{ name = "Aluci" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pre-commit (>=4.2.0,<5.0.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
