[project]
name = "ProjectName"
version = "0.1.0"
description = ""
authors = [{ name = "Aluci" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pre-commit (>=4.2.0,<5.0.0)", "pytest (>=8.4.0,<9.0.0)"]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
